<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/myColorDialogBG"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/finalize_data"
            android:textColor="@color/myColorBackgroundWhite"
            android:textSize="20dp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </RelativeLayout>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/etFinalizeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_edittext_dialog"
            android:elevation="2dp"
            android:hint="Name"
            android:inputType="textPersonName"
            android:textColor="@color/myColorEditTextDialogDisable"
            android:textColorHint="@color/myColorDialogBG" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnFinalizeSignature"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight=".5"
                android:background="@drawable/custom_button_dialog"
                android:elevation="2dp"
                android:text="@string/signature"
                android:textColor="@color/myColorBackgroundWhite"
                android:textStyle="bold" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnFinalizeCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight=".5"
                android:background="@drawable/custom_button_dialog"
                android:elevation="2dp"
                android:text="@string/cancel"
                android:textColor="@color/myColorBackgroundWhite"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>